--- a/style.css
+++ b/style.css
@@ -5,4 +5,12 @@ body,
     margin: 0;
     box-sizing: border-box;
     font-size: 62.5%; 
+    text-align: center;
+}
+
+.card{
+    box-sizing: border-box;
+    width: 50%;
+    border: solid #5B6DCD 10px;
+    padding: 5px;
 }
