--- a/style.css
+++ b/style.css
@@ -7,10 +7,57 @@ body,
     font-size: 62.5%; 
     text-align: center;
 }
-
+.main-container{
+    font-size: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+.section-1{
+    box-sizing: border-box;
+    width: 100%;
+    border: solid green 10px;
+    padding: 5px;
+    font-size: 1rem;
+}
+.section-2{
+    box-sizing: border-box;
+    width: 100%;
+    border: solid red 10px;
+    padding: 5px;
+    font-size: 1rem;
+}
+.section-3{
+    box-sizing: border-box;
+    width: 100%;
+    border: solid yellow 10px;
+    padding: 5px;
+    font-size: 1rem;
+}
+.row-1{
+    box-sizing: border-box;
+    width: 100%;
+    border: solid black 10px;
+    padding: 5px;
+    font-size: 1rem;
+}
+.row-2{
+    box-sizing: border-box;
+    width: 100%;
+    border: solid black 10px;
+    padding: 5px;
+    font-size: 1rem;
+}
+.row-3{
+    box-sizing: border-box;
+    width: 100%;
+    border: solid black 10px;
+    padding: 5px;
+    font-size: 1rem;
+}
 .card{
     box-sizing: border-box;
-    width: 50%;
+    width: 100%;
     border: solid #5B6DCD 10px;
     padding: 5px;
+    font-size: 1rem;
 }
