--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body,
     box-sizing: border-box;
     font-size: 62.5%; 
     text-align: center;
+    font-family: 'Libre Franklin', sans-serif;
+    font-family: 'Mooli', sans-serif;
+    background-image: url(neutralbackroundbeige.jpg);
 }
 .main-container{
     font-size: 20px;
@@ -30,27 +33,6 @@ body,
     box-sizing: border-box;
     width: 100%;
     border: solid yellow 10px;
-    padding: 5px;
-    font-size: 1rem;
-}
-.row-1{
-    box-sizing: border-box;
-    width: 100%;
-    border: solid black 10px;
-    padding: 5px;
-    font-size: 1rem;
-}
-.row-2{
-    box-sizing: border-box;
-    width: 100%;
-    border: solid black 10px;
-    padding: 5px;
-    font-size: 1rem;
-}
-.row-3{
-    box-sizing: border-box;
-    width: 100%;
-    border: solid black 10px;
     padding: 5px;
     font-size: 1rem;
 }
