--- a/style.css
+++ b/style.css
@@ -43,10 +43,21 @@ body,
     font-size: 1rem;
     margin: auto;
 }
+.section-4{
+    box-sizing: border-box;
+    width: 75%;
+    padding: 5px;
+    font-size: 1rem;
+    margin: auto;
+}
 .card{
     box-sizing: border-box;
     width: 100%;
     padding: 5px;
     font-size: 1rem;
     box-shadow: 5px 5px 10px black;
+    transition: all 0.3s;
+}
+.card:hover{
+    transform: scale(1.1);
 }
