--- a/style.css
+++ b/style.css
@@ -72,7 +72,21 @@ body,
     box-shadow: 5px 5px 10px black;
     transition: all 0.3s;
 }
-
+@media screen and (max-width: 1200px) {
+    .card {
+       width: 40%; 
+    }
+}
+@media screen and (max-width: 800px) {
+    .card {
+        width: 80%;
+    }
+}
+@media screen and (max-width: 400px) {
+    .card {
+        width: 100%;
+    }
+}
 .card1:hover {
     transform: rotate(360deg);
 }
